Fixed button alignment and size on mobile.

--- a/style.sass
+++ b/style.sass
@@ -118,6 +118,7 @@ body
     @media screen and (max-width: $lgmobile)
         width: 80vw
         margin-bottom: 10px
+        text-align: center
 
 .technologies
     margin-left: 3vw
@@ -137,6 +138,8 @@ body
 
 .main-cta
     +mainCta 
+    @media screen and (max-width: $lgmobile)
+        width: 90vw
 
 .header-section
     background: transparent linear-gradient(180deg, #453F8E 0%, #3A2047 100%) 0% 0% no-repeat padding-box
@@ -485,7 +488,9 @@ h2
     display: flex
     flex-flow: wrap
     @media screen and ( max-width: $lgmobile )
-        margin-left: 2.5vw
+        justify-content: center
+        align-items: center
+
 
 .project-container
     display: flex
@@ -771,6 +776,8 @@ li
    font-size: 14px
    margin-right: 15px
    text-decoration: none
+   @media screen and (max-width: $lgmobile)
+       margin-right: 0px
 
 .live-button
    border: none
@@ -820,6 +827,7 @@ footer
     +open-sans
     margin-bottom: 75px
     font-weight: 700
+    text-align: center
 
 .project-one
     margin-right: 25px
